--- a/practiceCSS.css
+++ b/practiceCSS.css
@@ -2,7 +2,15 @@ body {
   background-color: white;
 }
 
+.bigDiv
+{
+    height: 500px;
+    width: 100%;
+    background-color: aliceblue;
+    color: pink;
 
+    border: solid;
+}
 
 
 #box {
